# numeri

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  PUZZLE_AGENT.md  README.md  docker-compose.prod.yml  justfile  vcpkg.json
.github/workflows/: build.yml
backend/: pyproject.toml
backend/app/: config.py  equivalence.py  exceptions.py  logging.py  main.py  models.py  puzzles.py  routes.py  stats.py
backend/tests/: conftest.py  test_equivalence.py  test_puzzles.py  test_routes.py
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  releases.md
frontend/src/components/: ChoiceInput.tsx  FitBlock.tsx  FitText.tsx  Footer.tsx  FreeInput.tsx  Header.tsx  HintTrail.tsx  Latex.test.tsx  Latex.tsx  Layout.tsx  ModeToggle.tsx  PitfallTrail.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  expression.test.ts  expression.ts  palettes.ts  storage.ts  types.ts
frontend/src/routes/: Home.tsx  Releases.tsx
numeri/: CMakeLists.txt  main.cpp
numeri/include/: http_client.hpp  kernel.hpp  logging.hpp  model.hpp  plugin_interface.hpp  ring_buffer.hpp  websocket_client.hpp
numeri/legacy/app/: CMakeLists.txt  main.cpp  orderbook.cpp  orderbook.h  orderbuilder.cpp  readers.h  trading.h
numeri/legacy/service/: httpclient.cpp  httpclient.h  logging.h  websocketclient.cpp
numeri/plugins/: CMakeLists.txt  algorithm1.cpp  l2_ingestor.cpp  plugin1.cpp
numeri/src/: kernel.cpp
numeri/src/app/: constants.h
numeri/src/service/: CMakeLists.txt  websocketclient.h
src/: CMakeLists.txt  server.cpp
src/algorithm/: CMakeLists.txt  client.cpp
src/app/: CMakeLists.txt  constants.h  main.cpp  orderbook.cpp  orderbook.h  orderbuilder.cpp  readers.h  trading.h
src/app/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  websocketclient.h
src/server/: CMakeLists.txt  main.cpp  server.cpp
src/service/: CMakeLists.txt  httpclient.cpp  httpclient.h  logging.h  service.cpp  service.h  websocketclient.cpp  websocketclient.h
src/tests/: CMakeLists.txt  orderbooksnapshottest.cpp  orderbooktest.cpp
test/: CMakeLists.txt  test_plugin1.cpp  test_ringbuffer.cpp
